[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/RainArea.gd" type="Script" id=1]
[ext_resource path="res://Levels/Assets/Rain.png" type="Texture" id=2]
[ext_resource path="res://Levels/Assets/SFX_RainLoop.ogg" type="AudioStream" id=3]
[ext_resource path="res://Levels/Assets/SFX_Alarm.ogg" type="AudioStream" id=4]

[node name="RainArea" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
rain_duration = 8

[node name="SafeZones" type="Area2D" parent="."]
position = Vector2( 150, 300 )
collision_layer = 4

[node name="Lluvia" type="CPUParticles2D" parent="."]
emitting = false
amount = 400
lifetime = 3.3
speed_scale = 3.0
randomness = 1.0
texture = ExtResource( 2 )
emission_shape = 3
emission_points = PoolVector2Array( 20, 0, 40, 0, 60, 0, 80, 0, 100, 0, 120, 0, 140, 0, 160, 0, 180, 0, 200, 0, 220, 0, 240, 0, 260, 0, 280, 0, 300, 0 )
emission_colors = PoolColorArray(  )
angular_velocity = 10.0
angular_velocity_random = 0.2
linear_accel = 25.81
linear_accel_random = 1.0
scale_amount = 1.8
color = Color( 0.580392, 0.890196, 0.266667, 1 )

[node name="SFX_Rain" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0

[node name="SFX_Alarm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Fade" type="Tween" parent="."]
